Finish All Crud On Universiy & Faculty

--- a/App.Frontend/src/app/features/system-admin/components/faculties/faculties-grid/faculties-grid.component.html
+++ b/App.Frontend/src/app/features/system-admin/components/faculties/faculties-grid/faculties-grid.component.html
@@ -1,1 +1,37 @@
-{{universityDetail$ |async | json}}
+<div style="border-radius: 10px;
+            box-shadow: 5px 5px 15px rgba(113, 83, 83, 0.3);
+            padding: 10px;
+            background-color: white;">
+  <table class="table table-hover mb-0">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col">Address</th>
+        <th scope="col">Email</th>
+        <th scope="col">Website</th>
+        <th scope="col">IsDeleted</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let faculty of (universityDetail$ | async)?.faculties;let i = index; trackBy: trackById">
+        <td>{{ i+1 }}</td>
+        <td>{{ faculty.name }}</td>
+        <td>{{ faculty.description }}</td>
+        <td>{{ faculty.address }}</td>
+        <td>{{ faculty.email }}</td>
+        <td>{{ faculty.website }}</td>
+        <td>{{ faculty.isDeleted }}</td>
+        <td><a (click)="delete(faculty.id)"><i class="fa-regular fa-trash-can text-danger"></i></a></td>
+        <td><a (click)="edit(faculty.id)"><i class="fa-solid fa-pen-to-square text-primary"></i></a></td>
+      </tr>
+
+    </tbody>
+  </table>
+</div>
+
+
+
