--- a/App.Frontend/src/app/features/system-admin/components/faculties/faculty-form/faculty-dialog-form.component.html
+++ b/App.Frontend/src/app/features/system-admin/components/faculties/faculty-form/faculty-dialog-form.component.html
@@ -1,6 +1,6 @@
 <app-dialog #dialog dialogId="facultyModal">
 
-  <span dialog-title>Create faculty</span>
+  <span dialog-title>faculty</span>
 
   <div dialog-body>
     <form [formGroup]="form" (ngSubmit)="submit()">
