--- a/App.Frontend/src/app/shared/components/dialog/dialog.component.html
+++ b/App.Frontend/src/app/shared/components/dialog/dialog.component.html
@@ -1,3 +1,6 @@
+<button #openModalBtn type="button" class="d-none" data-bs-toggle="modal"
+  [attr.data-bs-target]="'#' + dialogId"></button>
+
 <div class="modal fade" [id]="dialogId" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
