--- a/App.Frontend/src/app/features/system-admin/components/universities/universities-grid/universities-grid.component.html
+++ b/App.Frontend/src/app/features/system-admin/components/universities/universities-grid/universities-grid.component.html
@@ -1,10 +1,16 @@
-<div style="border-radius: 10px;
-            box-shadow: 5px 5px 15px rgba(113, 83, 83, 0.3);
-            padding: 10px;
-            background-color: white;">
-  <table class="table table-hover mb-0">
-    <thead>
-      <tr>
+<!--Include Disable-->
+<div class="filter-group mb-4" style="width: fit-content;">
+  <label class="form-label">Show Status</label>
+  <select class="form-select form-select-sm" [(ngModel)]="includeDisabled" (change)="handleChangeIncludeDisabled()">
+    <option [ngValue]="false">Active Only</option>
+    <option [ngValue]="true">All University</option>
+  </select>
+</div>
+
+<!--Table-->
+<app-table>
+
+      <tr table-header>
         <th scope="col">#</th>
         <th scope="col">Name</th>
         <th scope="col">Description</th>
@@ -15,19 +21,24 @@
         <th scope="col"></th>
         <th scope="col"></th>
       </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let value of values$ | async;let i = index; trackBy: trackById">
+
+
+      <tr table-body *ngFor="let university of universities$ | async;let i = index; trackBy: trackById">
         <td>{{ i+1 }}</td>
-        <td>{{ value.name }}</td>
-        <td>{{ value.description }}</td>
-        <td>{{ value.address }}</td>
-        <td>{{ value.email }}</td>
-        <td>{{ value.website }}</td>
-        <td>{{ value.isDeleted }}</td>
-        <td><a (click)="delete(value.id)"><i class="fa-regular fa-trash-can text-danger"></i></a></td>
-        <td><a [routerLink]="['edit',value.id]"><i class="fa-solid fa-pen-to-square"></i></a></td>
+        <td>{{ university.name }}</td>
+        <td>{{ university.description }}</td>
+        <td>{{ university.address }}</td>
+        <td>{{ university.email }}</td>
+        <td>{{ university.website }}</td>
+        <td>{{ university.isDeleted }}</td>
+        <td>
+          <i *ngIf="university.isDeleted" (click)="restore(university.id)" class="fa-solid fa-retweet text-primary"></i>
+          <i *ngIf="!university.isDeleted" (click)="delete(university.id)" class="fa-regular fa-trash-can text-danger"></i>
+        </td>
+        <td><a [routerLink]="['edit',university.id]"><i class="fa-solid fa-pen-to-square"></i></a></td>
       </tr>
-    </tbody>
-  </table>
-</div>
+
+</app-table>
+
+
+
