--- a/App.Frontend/src/styles.css
+++ b/App.Frontend/src/styles.css
@@ -1,3 +1,30 @@
+/* CSS Variables */
+:root {
+  --main-color: #0a1f44;
+  --orange-color: #d4af37;
+  --orange-alt-color: #b8962e;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+  background-color: #f9fafb;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 /* Basic Configuration */
 :root {
   --color-blue: #56165d;
