Add Faculty Modal Html&Css

--- a/App.Frontend/src/app/features/admin/components/pages/uni-admin/uni-admin.component.html
+++ b/App.Frontend/src/app/features/admin/components/pages/uni-admin/uni-admin.component.html
@@ -51,6 +51,8 @@
       </div>
       <button
         class="new-unit me-auto me-md-0 text-white fw-normal rounded-2 px-3 py-2"
+        data-bs-toggle="modal"
+        data-bs-target="#addFaculty"
       >
         <i class="fa-solid fa-plus me-2"></i>
         Add New Unit
@@ -244,3 +246,5 @@
     </div>
   </div>
 </section>
+
+<app-faculty-dialog></app-faculty-dialog>
