--- a/App.Frontend/src/app/shared/components/dialog/dialog.component.html
+++ b/App.Frontend/src/app/shared/components/dialog/dialog.component.html
@@ -1,15 +1,24 @@
-<button #openModalBtn type="button" class="d-none" data-bs-toggle="modal"
-  [attr.data-bs-target]="'#' + dialogId"></button>
+<button
+  #openModalBtn
+  type="button"
+  class="d-none"
+  data-bs-toggle="modal"
+  [attr.data-bs-target]="'#' + dialogId"
+></button>
 
 <div class="modal fade" [id]="dialogId" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-
       <div class="modal-header">
         <h5 class="modal-title">
           <ng-content select="[dialog-title]"></ng-content>
         </h5>
-        <button type="button" #closeModalBtn class="btn-close" data-bs-dismiss="modal"></button>
+        <button
+          type="button"
+          #closeModalBtn
+          class="btn-close"
+          data-bs-dismiss="modal"
+        ></button>
       </div>
 
       <div class="modal-body">
@@ -18,4 +27,3 @@
     </div>
   </div>
 </div>
-
