--- a/App.Frontend/src/app/features/system-admin/modules/universities/pages/form-university-page/form-university-page.component.html
+++ b/App.Frontend/src/app/features/system-admin/modules/universities/pages/form-university-page/form-university-page.component.html
@@ -63,6 +63,11 @@
           class="btn btn-primary btn-sm"
           data-bs-toggle="modal"
           data-bs-target="#facultyModal"
+          *ngIf="
+            currentUser?.permissions?.includes(
+              permissions.faculties.createFaculties
+            )
+          "
         >
           Faculty
         </button>
