--- a/App.Frontend/src/app/features/system-admin/modules/universities/pages/universities-page/universities-page.component.html
+++ b/App.Frontend/src/app/features/system-admin/modules/universities/pages/universities-page/universities-page.component.html
@@ -1,15 +1,27 @@
 <div class="content-section p-3">
-
-  <div class="d-flex" style="justify-content: space-between;align-items: center;">
+  <div
+    class="d-flex"
+    style="justify-content: space-between; align-items: center"
+  >
     <h1 class="fw-bold fs-6 mb-1">Universties</h1>
-    <button type="button" class="btn btn-primary btn-sm  w-md-auto" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button
+      type="button"
+      class="btn btn-primary btn-sm w-md-auto"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+      *ngIf="
+        currentUser?.permissions?.includes(
+          permissions.universities.createUniversities
+        )
+      "
+    >
       Create
     </button>
   </div>
-  <p class="small text-secondary mb-0 fw-normal mb-3">Mange all universties and all faculities</p>
-
+  <p class="small text-secondary mb-0 fw-normal mb-3">
+    Mange all universties and all faculities
+  </p>
 
   <app-university-dialog></app-university-dialog>
   <app-universities-grid></app-universities-grid>
-
 </div>
