Change The Sturcture of Admin Module

--- a/App.Frontend/src/app/features/admin/modules/university/pages/university-page/university-page.component.html
+++ b/App.Frontend/src/app/features/admin/modules/university/pages/university-page/university-page.component.html
@@ -1,5 +1,6 @@
+<!--Statics Section-->
 <section class="my-2">
-  <div class="container px-0">
+  <div class="container-fluid px-0">
     <div class="rounded-4 border-3 border border-gray">
       <div
         class="d-flex flex-column flex-md-row p-3 align-items-md-center align-items-start"
@@ -228,8 +229,9 @@
   </div>
 </section>
 
+<!--Grid Section-->
 <section class="my-2">
-  <div class="container px-0">
+  <div class="container-fluid px-0">
     <div
       class="sec-2-header py-3 d-flex flex-column flex-md-row align-items-md-center justify-content-md-between justify-content-start"
     >
