Finish Faculty Page Html & Css

--- a/App.Frontend/src/app/features/admin/components/sidebar/sidebar.component.html
+++ b/App.Frontend/src/app/features/admin/components/sidebar/sidebar.component.html
@@ -1,6 +1,8 @@
 <!-- sidebar.component.html -->
 <div class="sidebar">
-  <div class="sidebar-header p-3 d-flex justify-content-between align-items-center">
+  <div
+    class="sidebar-header p-3 d-flex justify-content-between align-items-center"
+  >
     <div class="start-section d-flex align-items-center gap-2">
       <span>
         <i class="fa-solid fa-shield"></i>
@@ -12,7 +14,7 @@
     </span>
   </div>
 
-  <hr class="m-0">
+  <hr class="m-0" />
 
   <div class="sidebar-links p-1">
     <ul>
@@ -21,6 +23,12 @@
         <a routerLink="dashboard" routerLinkActive="active">
           <i class="fa-solid fa-gauge-high fa-fw"></i>
           <span>Dashboard</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="university" routerLinkActive="active">
+          <i class="fa-solid fa-building-columns"></i>
+          <span>University</span>
         </a>
       </li>
 
