--- a/App.Frontend/src/app/features/admin/modules/university/components/faculty-edit/faculty-edit.component.html
+++ b/App.Frontend/src/app/features/admin/modules/university/components/faculty-edit/faculty-edit.component.html
@@ -1,5 +1,5 @@
 <section class="my-2">
-  <div class="container px-0">
+  <div class="container-fluid px-0">
     <div
       class="setting-dashboard border border-2 border-gray px-4 py-3 rounded-4"
     >
