--- a/App.Frontend/src/app/features/admin/modules/university/pages/university-page/university-page.component.html
+++ b/App.Frontend/src/app/features/admin/modules/university/pages/university-page/university-page.component.html
@@ -302,7 +302,11 @@
             </div>
           </div>
           <div class="d-flex justify-content-between buttons my-3">
-            <button type="button" class="dashboard fw-normal rounded-3 px-4">
+            <button
+              type="button"
+              class="dashboard fw-normal rounded-3 px-4"
+              routerLink="faculty"
+            >
               <i class="fa-solid fa-eye"></i>
               Dashboard
             </button>
